--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,179 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Outfit', sans-serif;
+  /* background: #F17983;
+  color: white; */
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  box-sizing: border-box;
 }
+
+.nav-list{
+  display: flex;
+  list-style: none;
+  letter-spacing: 1.2px;
+  font-size: 1.1em;
+}
+
+.nav-list-item{
+  margin-left: 2em;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 0.3em 1.9em;
+
+}
+
+.heading-light{
+  font-size: 1.7em;
+  font-weight: 400;
+  margin: 0;
+  text-align: center;
+}
+
+.heading{
+  font-size: 3em;
+  letter-spacing: 1.1px;
+  margin: 0;
+  text-align: center;
+}
+
+.hero,
+.offerings,
+.portfolio,
+.testimonials,
+.footer{
+  text-align: center;
+  width: 100%;
+  padding: 0 3em;
+  margin-bottom: 7em;
+}
+
+h2{
+  margin: 0 0 2em 0;
+  letter-spacing: 1.1px;
+  padding: 0.7em;
+}
+
+.offering{
+  display: flex;
+  align-items: center;
+  margin: 0 3em;
+  gap: 1.3em;
+}
+
+.offering-pic{
+  width: 17%;
+}
+
+.offering-content{
+  width: 20%;
+}
+
+.offering-categories{
+  display: flex;
+  justify-content: center;
+  gap: 3.3em;
+  cursor: pointer;
+}
+
+/* .grid{
+  width: 500px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+} */
+
+.buddha{
+  width: 500px;
+}
+
+.grid-second{
+  width: 25%;
+  object-fit: cover;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows:1fr 1fr ;
+}
+
+.discussion{
+  display: flex;
+  justify-content: space-between;
+  background-color: #F17983;
+  color: white;
+  padding: 3em 7em;
+  margin-bottom: 3.7em;
+}
+
+.discussion-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.discussion-heading{
+  margin: 0 0 1em 0;
+  padding: 0;
+  font-size: 1.9em;
+  letter-spacing: 1.1px;
+}
+
+.discussion-para{
+  margin: 0 0 1em 0;
+  padding: 0;
+}
+
+button{
+  font-size: 1em;
+  padding: 0.7em 1.7em;
+  background: transparent;
+  border: 3px solid white;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover,
+button:focus{
+  color: #F17983;
+  background: white;
+}
+
+.footer-navigation{
+  text-align: center;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+a{
+  text-decoration: none;
+  color: cyan;
+  font-weight: bold;
+}
+
+a:hover,
+a:focus{
+  color: #F17983;
+}
+
+.footer{
+  margin-bottom: 0;
+}
+
+.footer-icons{
+  font-size: 2.3em;
+}
+
+
+
+
+
+
+
+
